# virtual-file-sytem-v3

./: LICENSE  README.md
client/: .env  .eslintignore  .eslintrc  .eslintrc.json  .prettierignore  index.html  netlify.toml  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
client/src/: App.vue  main.ts
client/src/assets/styles/: forms.css  index.css  scrollbar.css
client/src/components/: VFooter.vue  VHeader.vue  VMain.vue  VTriangle.vue  VWindow.vue  VWindowBlock.vue  VWindowBlockBody.vue  VWindowBlockHeader.vue
client/src/composables/: index.ts  normalizePath.ts  useYargs.ts
client/src/constants/: DateFormat.ts
client/src/helpers/: axios.ts  index.ts  path.ts
client/src/mocks/: blocks.ts
client/src/types/: components.d.ts  env.d.ts  models.d.ts
docs/: README.md  concepts.md  core-concepts.md  known-issues.md  notes.md  project-structure.md  references.md  requirements.md  roadmap.md
server/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  musl-build.sh  sqlx-data.json
server/db/Scripts/node-table/: mocks.sql  tests.sql
server/dbeaver/: .project
server/dbeaver/.dbeaver/: .project-metadata.json.bak  credentials-config.json  data-sources.json  project-metadata.json
server/dbeaver/Scripts/node-table/: mocks-mp-arr.sql  mocks-mp.sql  mocks.sql  operations-mp-arr.sql  operations-mp.sql  operations.sql
server/migrations/: 20220315085629_node-table.down.sql  20220315085629_node-table.up.sql
server/src/: main.rs
server/src/api/: errors.rs  handlers.rs  mod.rs  models.rs  response.rs
server/src/config/: env.rs  mod.rs
